// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "layout": "There should be atleast one layout item to create a contact layout.",
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "layout": undefined,
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "layout": undefined,
  "name": false,
}
`;
